--- a/小红书电商化分析2023.md
+++ b/小红书电商化分析2023.md
@@ -2,9 +2,9 @@
 
 ​		小红书作为一款以社区内容运营起家的产品，也就是我们熟悉的“种草”模式的鼻祖。但作为一款以社区内容为核心的产品，以目前的市场来看如果想要商业化只有广告和电商这两条路。但社区内容商业化一直存在着难以调和的矛盾，一方面目前缺乏变现手段，几乎只有广告和电商这两条路；另外一方面，社区分为与内容商业化之间的平衡问题。
 
-本文想要探讨的问题就是**小红书的电商化能否成功，以及能否成功背后的逻辑**。
+​		本文想要探讨的问题就是**小红书的电商化能否成功，以及能否成功背后的逻辑**。
 
-# 二、分析框架
+# 二、分析框架：金字塔模型
 
 ​		今天以金字塔的框架进行分析：
 
