--- a/哈罗德-多马增长模型与当今中国的发展的适配性.md
+++ b/哈罗德-多马增长模型与当今中国的发展的适配性.md
@@ -23,9 +23,9 @@
 本文使用永续盘存法计算资本存量时，选择了中国各省市 2000-2020 年固定资产投资额、 GDP 国内生产总值；在演算哈罗德模型过程中，选取中国各省市 2005-2020 年储蓄率
 
 本文基于张军 2004 年《中国省际物质资本存量估算 :1952 —2000》，在估计一个基准年后运用永续盘存法按不变价格计算各省区市的资本存量： 
-$$
-K_{i t}=K_{i t-1}\left(1-\delta_{t}\right)+I_{i t}(\text { 亿元 })
-$$
+
+$$K_{i t}=K_{i t-1}\left(1-\delta_{t}\right)+I_{i t}(\text { 亿元 })$$
+
 其中，本组按照张军计算得到的各省固定资本形成总额的经济折旧率δ，将其数值定为 9.6 %， 接着根据上式通过 stata17 计算得到 2000-2020 年各省区市的资本存量。 接着，通过下式计算得到 2000-2020 年各省区市的资本产出比:
 
 资本产出比 = 资本存量/GDP
@@ -77,3 +77,4 @@ g = 储蓄率/资本产出比
 ​		将全国的经济增长率结合我国经济政策的时间线来看，整体是符合一致的，例如2001年后加入世贸组织，我国经济增长率处于高水平，后续缺乏动力刺激，经济增长放缓，遇到2016年左右下降明显，但此时我国并没有遭受严重的外生冲击，相比2018年的贸易摩擦，和2020年的新冠疫情的影响，本应该出现严重的下滑，但哈罗德-多马模型并没有出现相应的走势，说明哈罗德-多马的经济增长模型，并不适合用来测量当今中国的发展情况。
 
 ​		至于原因，严格的假定可能是重要的因素，例如假设不存在技术进步，但对于2023年AI跨时代发展的技术入雨后春笋般涌现，这个假设就严格不存在，但也不能完全否定哈罗德-多马的经济增长模型，他的思路和理论仍有借鉴和学习的意义。
+
