--- a/哈罗德-多马增长模型与当今中国的发展的适配性.md
+++ b/哈罗德-多马增长模型与当今中国的发展的适配性.md
@@ -78,3 +78,8 @@ g = 储蓄率/资本产出比
 
 ​		至于原因，严格的假定可能是重要的因素，例如假设不存在技术进步，但对于2023年AI跨时代发展的技术入雨后春笋般涌现，这个假设就严格不存在，但也不能完全否定哈罗德-多马的经济增长模型，他的思路和理论仍有借鉴和学习的意义。
 
+
+
+版权声明©
+
+创作不易，转载请注明出处 
