--- a/基于用户体验的电商产品对比分析.md
+++ b/基于用户体验的电商产品对比分析.md
@@ -169,3 +169,8 @@
 
 ​	总体来说，目前淘宝和京东的用户体验还是存在一定优势的，拼多多、唯品会可能更多依靠产品和价格建立优势，而抖音、小红书由于产品本身的限制，导致其对于电商用户来说不是最佳的选择，除非有直播带货，价格优势，平台大力宣传等模式否则在体验的角度来说，还存在一定的差距。
 
+
+
+版权声明©
+
+创作不易，转载请注明出处 
