--- a/小红书电商化分析2023.md
+++ b/小红书电商化分析2023.md
@@ -292,3 +292,9 @@ https://juejin.cn/post/7220611580194046013
 [艾媒咨询|2022-2023年中国直播电商行业运行大数据分析及趋势研究报告(附下载)-艾媒网](https://www.iimedia.cn/c400/86233.html)
 
 [艾媒咨询|2022年中国直播行业发展现状及市场调研分析报告(附下载)-艾媒网](https://www.iimedia.cn/c400/84858.html)
+
+
+
+版权声明©
+
+创作不易，转载请注明出处 
