--- a/中国未来房地产的出路.md
+++ b/中国未来房地产的出路.md
@@ -121,7 +121,7 @@
 
 ​		其实更加具体的是北京，所谓的一环、二环、三环等就是以环的形式逐渐拓展城市的边缘。此外，随着广州周边的发展，广州市中心的天河区价格并没有受到影响，反而推动房价的继续上涨。
 
-![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E5%A4%A9%E6%B2%B3%E5%8C%BA%E6%88%BF%E4%BB%B7.png)
+<img src="https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E5%A4%A9%E6%B2%B3%E5%8C%BA%E6%88%BF%E4%BB%B7.png" style="zoom:50%;" />
 
 数据来源：房客网（2008年-2022年）
 
