--- a/案例分析--指标异动1-理论基础.md
+++ b/案例分析--指标异动1-理论基础.md
@@ -54,13 +54,55 @@ A.单因素
 
 $$ Y=N \times A \times S \times P$$
 
-
+以留存购买率P为例，当P变动时，对Y的影响大小
 
 $$\begin{array}{c}
 I_{P}=\left|\frac{Y^{1}-Y^{0}}{Y^{0}}\right|=\mid \frac{N \times A \times S \times(P+\Delta P)-N \times A \times S \times P}{N \times A \times S \times P} \\
 I_{P}=\left|\frac{N \times A \times S \times \Delta P}{N \times A \times S \times P}\right| \\
 I_{P}=\left|\frac{\Delta P}{P}\right|
 \end{array}$$
+
+类似的可以求解到其他的因子对于整体指标Y的影响。但仅局限于，单一因子单一的变化，如果存在多个因子的同时变动，则上述方法失效。
+
+多因子：LMDI乘积因子拆解
+
+首先，我们仍然以上述案例为例：
+
+$$ Y=N \times A \times S \times P$$
+
+然后计算每个因子的贡献：
+
+
+
+$$\begin{array}{l}
+C_{N}=L\left(Y^{1}, Y^{0}\right) * \ln \left(\frac{N^{1}}{N^{0}}\right) \\
+C_{A}=L\left(Y^{1}, Y^{0}\right) * \ln \left(\frac{A^{1}}{A^{0}}\right) \\
+C_{R}=L\left(Y^{1}, Y^{0}\right) * \ln \left(\frac{R^{1}}{R^{0}}\right) \\
+C_{P}=L\left(Y^{1}, Y^{0}\right) * \ln \left(\frac{P^{1}}{P^{0}}\right)
+\end{array}$$
+
+其中：
+
+$$L\left(Y^{1}, Y^{0}\right)=\frac{Y^{1}-Y^{0}}{\ln \left(Y^{1}\right)-\ln \left(Y^{0}\right)}=\frac{\Delta Y}{\ln \left(Y^{1}\right)-\ln \left(Y^{0}\right)}$$
+
+然后计算四个因子对整体变化率的贡献，即重要性：
+
+$$\begin{aligned}
+I_{N} & =\frac{C_{N}}{Y^{0}} \\
+I_{A} & =\frac{C_{A}}{Y_{0}} \\
+I_{R} & =\frac{C_{R}}{Y_{0}} \\
+I_{P} & =\frac{C_{P}}{Y_{0}}
+\end{aligned}$$
+
+备注：
+
+LMDI方法有两个显著的优点：
+
+（1）MECE（不重复、不遗漏），各个因子的贡献求和会等于整体指标的变化率，不会存在残差项（解释不清楚的部分）
+
+（2）计算独立，每个因子的贡献率计算过程是相互独立的，无论先算哪个结果都一样。
+
+
 
 B.  双因素
 
@@ -69,7 +111,9 @@ B.  双因素
   双因素分析是一个能够解决此类问题的非常好的算法。为什么称之为“双因素分析法”，因为相对数指标的分项对整体的贡献，受两个因素影响：
 
 - 分项的相对数指标达成情况；
-- 分项在整体中所占的比重；结构问题
+- 分项在整体中所占的比重；
+
+例如：在广告投放中需要关注的点击率CTR=点击数/展示数；然后假设投放的渠道包括A、B、C、D、E。本期的点击率出现了较为明显的下滑，需要定位是哪个渠道出现了问题，以及每个渠道对整体的贡献如何。
 
 
 
@@ -79,7 +123,7 @@ C.多因素
 
 （1）回归：多重线性回归、逻辑回归、Cox回归：
 
-# 二、案例分析
+# 
 
 
 
