--- a/案例分析--指标异动2--案例分析.md
+++ b/案例分析--指标异动2--案例分析.md
@@ -36,7 +36,7 @@
 
 （1）运营侧：活动运营影响
 
-（2）技术侧：数据确实、埋点获取不正确
+（2）技术侧：数据缺失、埋点获取不正确
 
 5.分析过程：
 
@@ -51,3 +51,89 @@
 
 
 二、案例二：
+
+1.案例业务场景与生产场景：同案例一
+
+
+
+2.问题背景
+
+​	 从2019.8.27号开始收入出现了大幅度下降，从平均的20k降低到4k左右，下降幅度过大属于异常变动。
+
+3.结论
+
+​	通过分析可以排除运营侧的异常问题，并定位到是生产端的同步率出现了异常。可能的原因，产品相关功能出现bug无法正常同步,或者同步数据的获取出现了异常。
+
+​	后续可进一步同技术侧沟通，是否出现相关功能异常或者数据获取的异常导致。
+
+4.推测
+
+外部：pest模型
+
+内部：
+
+（1）产品侧：产品功能异常，
+
+（2）运营侧：周期性异常、活动运营异常，细分维度异常、转化异常
+
+（3）技术侧：数据获取异常、
+
+5.抽样
+
+抽取8.1-8.31的收入数据表和生产数据表
+
+具体的数据格式如下：
+
+收入数据表：
+
+| strategy | platform | app_version | hits  | shows | clicks | plays | pays | pay_mount | dt         |
+| -------- | -------- | ----------- | ----- | ----- | ------ | ----- | ---- | --------- | ---------- |
+| Other    | Android  | 10          | 1336  | 763   | 287    | 185   | 33   | 330       | 2019-08-01 |
+| Other    | Android  | 11          | 11651 | 6916  | 2872   | 1925  | 432  | 4320      | 2019-08-01 |
+
+生产数据表：
+
+| strategy | teacher | makes | onlines | cycles | dt         |
+| -------- | ------- | ----- | ------- | ------ | ---------- |
+| Other    | New     | 6     | 5       | 4      | 2019-08-01 |
+| Other    | Old     | 41    | 34      | 32     | 2019-08-01 |
+
+
+
+6.分析过程：
+
+（1）下钻分析：
+
+![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E6%A1%88%E4%BE%8B%E4%BA%8C01.png)
+
+首先收入在27号左右出现了明显的下降：并通过从版本、平台、策略的角度进行下钻分析，发现
+
+下钻各维度均呈现同步下滑趋势，从而可以排除这几个维度的影响。
+
+（2）指标拆解分析：
+
+根据业务，可以将指标进行如下拆解：
+
+$$收入=单价 \ast 购买数$$
+
+$$收入=单价 \ast \frac{购买数}{播放数}  \ast \frac{播放数}{点击数}  \ast \frac{点击数}{展现数}  \ast \frac{展现数}{命中数} \ast命中数$$
+
+$$收入=单价 \ast 购买率 \ast 播放率 \ast 点击率 \ast 展现率 \ast 命中数$$
+
+其中：命中数还可以继续根据业务拆解
+
+$$命中数=生产总数 \ast 上线率 \ast 同步率率 $$
+
+对此进行分析：
+
+![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E6%A1%88%E4%BE%8B%E4%BA%8C02.png)
+
+根据指标拆解可以定位到是同步率出现了问题，而根据业务可知，影响同步率主要的是老师和策略的维度，并以此进行下钻分析：
+
+![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E6%A1%88%E4%BE%8B%E4%BA%8C03.png)
+
+根据上图可知，不同老师以及不同策略的同步率均出现了同步下滑的趋势，均可以排除作为影响因素。对此推测可能归属于生产侧的数据获取异常
+
+7.落地跟进
+
+​		经过与技术侧沟通后定位到产品功能出现了bug，导致部分用户无法正常同步视频。对此，研发改进后重新上线，后续还需跟进观察同步率、命中数、收入是否回归正常。
