--- a/案例分析--指标异动2--案例分析.md
+++ b/案例分析--指标异动2--案例分析.md
@@ -122,7 +122,7 @@ $$收入=单价 \ast 购买率 \ast 播放率 \ast 点击率 \ast 展现率 \ast
 
 其中：命中数还可以继续根据业务拆解
 
-$$命中数=生产总数 \ast 上线率 \ast 同步率率 $$
+$$命中数=生产总数 \ast 上线率 \ast 同步率 $$
 
 对此进行分析：
 
@@ -137,3 +137,9 @@ $$命中数=生产总数 \ast 上线率 \ast 同步率率 $$
 7.落地跟进
 
 ​		经过与技术侧沟通后定位到产品功能出现了bug，导致部分用户无法正常同步视频。对此，研发改进后重新上线，后续还需跟进观察同步率、命中数、收入是否回归正常。
+
+
+
+版权声明©2023 gentle-night
+
+创作不易，转载请注明出处
