--- a/案例分析--指标异动2--案例分析.md
+++ b/案例分析--指标异动2--案例分析.md
@@ -128,11 +128,15 @@ $$命中数=生产总数 \ast 上线率 \ast 同步率 $$
 
 ![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E6%A1%88%E4%BE%8B%E4%BA%8C02.png)
 
+
+
 根据指标拆解可以定位到是同步率出现了问题，而根据业务可知，影响同步率主要的是老师和策略的维度，并以此进行下钻分析：
 
-![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E6%A1%88%E4%BE%8B%E4%BA%8C03.png)
+![](https://pic-stored.oss-cn-beijing.aliyuncs.com/image/%E7%AD%96%E7%95%A5%E4%B8%8E%E8%80%81%E5%B8%88.png)
 
-根据上图可知，不同老师以及不同策略的同步率均出现了同步下滑的趋势，均可以排除作为影响因素。对此推测可能归属于生产侧的数据获取异常
+
+
+​		根据上图可知，不同老师以及不同策略的同步率均出现了同步下滑的趋势，均可以排除作为影响因素。对此推测可能归属于生产侧的数据获取异常。
 
 7.落地跟进
 
